--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: "arial-rounded-regular";
+  src: url("https://www.dafontfree.net/data/1/a/20/unicode.arialr.ttf")
+      format("woff"),
+    url("https://www.dafontfree.net/data/1/a/20/unicode.arialr.ttf")
+      format("opentype"),
+    url("https://www.dafontfree.net/data/1/a/20/unicode.arialr.ttf")
+      format("truetype");
+}
+
 :root {
   font-size: 100%;
   --space: 0.5rem;
